poem_poster.log

> instagram_api@1.0.0 start
> node ./src/main.js

{
  Poem: 'Do not go gentle into that good night',
  Author: 'Dylan Thomas',
  year: '1937'
}
divided into stories
Given Directory already exists !!
story image ./stories/story1.jpg, created
story image ./stories/story2.jpg, created
story image ./stories/story3.jpg, created
exif data added
logged in as: hot_top1c
/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/core/request.js:126
        return new errors_1.IgResponseError(response);
               ^

IgResponseError: POST /rupload_igphoto/1671416251623_0_3602917500 - 302 Found; 
    at Request.handleResponseError (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/core/request.js:126:16)
    at Request.send (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/core/request.js:54:28)
    at async UploadRepository.photo (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/repositories/upload.repository.js:18:26)
    at async PublishService.uploadAndConfigureStoryPhoto (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/services/publish.service.js:388:9)
    at async post_story (file:///home/telix/instagram_poem_poster/src/instagram_api/post_story.js:8:26)
    at async file:///home/telix/instagram_poem_poster/src/main.js:85:22

Node.js v19.3.0

> instagram_api@1.0.0 start
> node ./src/main.js

{
  Poem: 'Do not go gentle into that good night',
  Author: 'Dylan Thomas',
  year: '1937'
}
divided into stories
Given Directory already exists !!
story image ./stories/story1.jpg, created
story image ./stories/story2.jpg, created
story image ./stories/story3.jpg, created
exif data added
logged in as: hot_top1c
/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/core/request.js:126
        return new errors_1.IgResponseError(response);
               ^

IgResponseError: POST /rupload_igphoto/1671416441833_0_1031100976 - 302 Found; 
    at Request.handleResponseError (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/core/request.js:126:16)
    at Request.send (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/core/request.js:54:28)
    at async UploadRepository.photo (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/repositories/upload.repository.js:18:26)
    at async PublishService.uploadAndConfigureStoryPhoto (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/services/publish.service.js:388:9)
    at async post_story (file:///home/telix/instagram_poem_poster/src/instagram_api/post_story.js:8:26)
    at async file:///home/telix/instagram_poem_poster/src/main.js:85:22

Node.js v19.3.0

> instagram_api@1.0.0 start
> node ./src/main.js

{
  Poem: 'Do not go gentle into that good night',
  Author: 'Dylan Thomas',
  year: '1937'
}
divided into stories
Given Directory already exists !!
story image ./stories/story1.jpg, created
story image ./stories/story2.jpg, created
story image ./stories/story3.jpg, created
exif data added
logged in as: hot_top1c
/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/core/request.js:126
        return new errors_1.IgResponseError(response);
               ^

IgResponseError: POST /rupload_igphoto/1671416915142_0_8302346611 - 302 Found; 
    at Request.handleResponseError (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/core/request.js:126:16)
    at Request.send (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/core/request.js:54:28)
    at async UploadRepository.photo (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/repositories/upload.repository.js:18:26)
    at async PublishService.uploadAndConfigureStoryPhoto (/home/telix/instagram_poem_poster/node_modules/instagram-private-api/dist/services/publish.service.js:388:9)
    at async post_story (file:///home/telix/instagram_poem_poster/src/instagram_api/post_story.js:8:26)
    at async file:///home/telix/instagram_poem_poster/src/main.js:85:22

Node.js v19.3.0

> instagram_api@1.0.0 start
> node ./src/main.js

{
  Poem: 'Do not go gentle into that good night',
  Author: 'Dylan Thomas',
  year: '1937'
}
divided into stories
Given Directory already exists !!
story image ./stories/story1.jpg, created
story image ./stories/story2.jpg, created
story image ./stories/story3.jpg, created
exif data added
logged in as: hot_top1c
./stories/story1.jpg post status: ok
waiting for 15s
./stories/story2.jpg post status: ok
waiting for 15s
./stories/story3.jpg post status: ok
waiting for 15s
Do not go gentle into that good night checked off

> instagram_api@1.0.0 start
> node ./src/main.js

file:///home/telix/instagram_poem_poster/src/main.js:36
cont log = make_logger('', true);
     ^^^

SyntaxError: Unexpected identifier 'log'
    at ESMLoader.moduleStrategy (node:internal/modules/esm/translators:117:18)
    at ESMLoader.moduleProvider (node:internal/modules/esm/loader:459:14)
    at async link (node:internal/modules/esm/module_job:68:21)

Node.js v19.3.0

> instagram_api@1.0.0 start
> node ./src/main.js

node:internal/errors:491
    ErrorCaptureStackTrace(err);
    ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find package 'chalk' imported from /home/telix/instagram_poem_poster/src/logger.js
    at new NodeError (node:internal/errors:400:5)
    at packageResolve (node:internal/modules/esm/resolve:823:9)
    at moduleResolve (node:internal/modules/esm/resolve:872:20)
    at defaultResolve (node:internal/modules/esm/resolve:1087:11)
    at nextResolve (node:internal/modules/esm/loader:161:28)
    at ESMLoader.resolve (node:internal/modules/esm/loader:834:30)
    at ESMLoader.getModuleJob (node:internal/modules/esm/loader:415:18)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/module_job:77:40)
    at link (node:internal/modules/esm/module_job:76:36) {
  code: 'ERR_MODULE_NOT_FOUND'
}

Node.js v19.3.0

> instagram_api@1.0.0 start
> node ./src/main.js

node:internal/errors:491
    ErrorCaptureStackTrace(err);
    ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find package 'moment' imported from /home/telix/instagram_poem_poster/src/logger.js
    at new NodeError (node:internal/errors:400:5)
    at packageResolve (node:internal/modules/esm/resolve:823:9)
    at moduleResolve (node:internal/modules/esm/resolve:872:20)
    at defaultResolve (node:internal/modules/esm/resolve:1087:11)
    at nextResolve (node:internal/modules/esm/loader:161:28)
    at ESMLoader.resolve (node:internal/modules/esm/loader:834:30)
    at ESMLoader.getModuleJob (node:internal/modules/esm/loader:415:18)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/module_job:77:40)
    at link (node:internal/modules/esm/module_job:76:36) {
  code: 'ERR_MODULE_NOT_FOUND'
}

Node.js v19.3.0

> instagram_api@1.0.0 start
> node ./src/main.js

[20-12-22 19:23:27]  {"Poem":"Do not go gentle into that good night","Author":"Dylan Thomas","year":"1937"}
[20-12-22 19:23:27]  "divided into stories"
Given Directory already exists !!
[20-12-22 19:23:29]  "story image ./stories/story1.jpg, created"
[20-12-22 19:23:31]  "story image ./stories/story2.jpg, created"
[20-12-22 19:23:32]  "story image ./stories/story3.jpg, created"
[20-12-22 19:23:32]  "exif data added"
logged in as: hot_top1c
[20-12-22 19:23:43]  "./stories/story1.jpg post status: ok"
[20-12-22 19:23:43]  "waiting for 15s"
[20-12-22 19:24:2]  "./stories/story2.jpg post status: ok"
[20-12-22 19:24:2]  "waiting for 15s"
[20-12-22 19:24:22]  "./stories/story3.jpg post status: ok"
[20-12-22 19:24:22]  "waiting for 15s"
[20-12-22 19:24:37]  "Do not go gentle into that good night checked off"

> instagram_api@1.0.0 start
> node ./src/main.js

[20-12-22 19:27:53]  {"Poem":"Do not go gentle into that good night","Author":"Dylan Thomas","year":"1937"}
[20-12-22 19:27:53]  "divided into stories"
Given Directory already exists !!
[20-12-22 19:27:55]  "story image ./stories/story1.jpg, created"
[20-12-22 19:27:57]  "story image ./stories/story2.jpg, created"
[20-12-22 19:27:58]  "story image ./stories/story3.jpg, created"
[20-12-22 19:27:58]  "exif data added"
logged in as: hot_top1c
[20-12-22 19:28:8]  "./stories/story1.jpg post status: ok"
[20-12-22 19:28:8]  "waiting for 15s"
[20-12-22 19:28:28]  "./stories/story2.jpg post status: ok"
[20-12-22 19:28:28]  "waiting for 15s"
[20-12-22 19:28:47]  "./stories/story3.jpg post status: ok"
[20-12-22 19:28:47]  "waiting for 15s"
[20-12-22 19:29:2]  "Do not go gentle into that good night checked off"

> instagram_api@1.0.0 start
> node ./src/main.js

[20-12-22 19:30:30]  {"Poem":"How Do I Love Thee? (Sonnet 43)","Author":"Elizabeth Barrett Browning","year":"1850"}
[20-12-22 19:30:30]  "divided into stories"
Given Directory already exists !!
[20-12-22 19:30:32]  "story image ./stories/story1.jpg, created"
[20-12-22 19:30:34]  "story image ./stories/story2.jpg, created"
[20-12-22 19:30:34]  "exif data added"
logged in as: hot_top1c
[20-12-22 19:30:43]  "./stories/story1.jpg post status: ok"
[20-12-22 19:30:43]  "waiting for 15s"
[20-12-22 19:31:3]  "./stories/story2.jpg post status: ok"
[20-12-22 19:31:3]  "waiting for 15s"
[20-12-22 19:31:18]  "How Do I Love Thee? (Sonnet 43) checked off"
